# search_engine

./: .gitignore  CMakeLists.txt  README.md  config.json
classes/: converterjson.h  invertedindex.h  searchserver.h
data/: config.json  request.json
include/: answer.json  converterjson.h  invertedindex.h  searchserver.h
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  converterjson.cpp  invertedindex.cpp  main.cpp  searchserver.cpp
tests/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchServer_test.cpp  test.cpp
